System Tray > Network > Hide default cellular network

For Settings, we create a default Cellular network even when Cellular
is disabled or no Service is a vailable so that the UI can configure
device properties (crbug.com/717063).

A side effect of this was that this network shows up in the system
tray which is confusing. We should skip it in that UI.

Bug: 775767
Change-Id: I41bada47bd142d0754436ad168ded02255bd4834
Reviewed-on: https://chromium-review.googlesource.com/729712
Reviewed-by: Ben Chan <benchan@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510287}
Former-commit-id: fe4b542f5cd637921a9db4b40f14dd3258ce0f21